--- a/Trevor Death Simulator/index.html
+++ b/Trevor Death Simulator/index.html
@@ -3,16 +3,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<title>TOP SECRET</title>
-<link rel="stylesheet" media="screen" href="/stylesheets/darker.css"/>
-<link rel="stylesheet" media="screen" href="/recent_dark.css"/>
-<link rel="shortcut icon" href="/static/jp.ico" /></head>
-<body>
-<div class="boardlist">[ <a href="/jp/index.html">jp</a> ]  [ <a href="/kc/index.html">kc</a> / <a href="/drive/index.html">drive</a> ]  [ <a href="irc://irc.rizon.net/warosu">irc</a> / <a href="http://fuuka.warosu.org/jp/?task=page&page=1&ghost=View+in+Ghost+mode">warosu</a> / <a href="http://boards.4chan.org/jp/">Jannie's Palace</a> ]</div>
-<header><h1>Top Secret</h1>
 <p>Trevor Death Simulator</p>
 <p>Version 0.1</p>
 <p>&nbsp;</p></header>
+<audio preload autoplay loop src="http://162.243.254.184/ts/ely.mp3" />
 <br></br>
 <style>
 body {
